Limit Quick Edit dropdown users, fix dunder-method visibility.

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -9,6 +9,14 @@ div.wrap.index-users > form > table.form-table > tbody > tr > td > div > span.ra
     margin-right: 0.5em;
 }
 
-div.wrap.index-users > form > table.form-table > tbody > tr > td > div > p {
+div.wrap.index-users > form > table.form-table > tbody > tr > td > p {
     word-break: break-word;
+}
+
+div.wrap.index-users > form > table.form-table > tbody > tr > td > p.menu-note {
+    margin-bottom: 1em;
+}
+
+input#quickedit_threshold_limit {
+    width: 5em;
 }
